# weakforced

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile.am  NOTICE  README.md  base64.hh  blacklist.cc  blacklist.hh  configure.ac  device_parser.cc  device_parser.hh  dns.hh  dns_lookup.cc  dns_lookup.hh  dnslabeltext.cc  dolog.hh  hmac.hh  htmlfiles.h  iputils.cc  iputils.hh  login_tuple.cc  login_tuple.hh  luastate.hh  minicurl.cc  minicurl.hh  misc.cc  misc.hh  namespaces.hh  pdnsexception.hh  perf-stats.cc  perf-stats.hh  replication.cc  replication.hh  replication.proto  replication_bl.cc  replication_bl.hh  replication_sdb.cc  replication_sdb.hh  set-version  (+31 more)
builder-support/: gen-version
common/: Makefile.am  base64.hh  common-lua.cc  common-lua.hh  customfunc.hh  device_parser.cc  device_parser.hh  dns_lookup.cc  dns_lookup.hh  dolog.hh  hmac.cc  hmac.hh  iputils.cc  iputils.hh  lock.hh  login_tuple.cc  login_tuple.hh  minicurl.cc  minicurl.hh  misc.cc  misc.hh  namespaces.hh  pdnsexception.hh  perf-stats.cc  perf-stats.hh  prometheus.cc  prometheus.hh  sholder.hh  sodcrypto.cc  sodcrypto.hh  sstuff.hh  test-crypto.cc  test-minicurl.cc  test-serialize.cc  testrunner.cc  twmap-static.cc  twmap.hh  webhook.cc  webhook.hh  wforce-geoip.cc  (+7 more)
debian/: changelog  control  postinst  rules
docker/: .gitignore  Makefile.am  docker-compose.yml  docker_push.sh
docker/elasticsearch/: Dockerfile
docker/elasticsearch/data-dir/: .gitignore
docker/image/: Dockerfile  docker-entrypoint.sh  wforce.conf.j2
docker/kibana/: kibana_saved_objects.json
docker/logstash/: Dockerfile
docker/logstash/config/: logstash.conf
docker/logstash/geoip/: .gitignore  GeoIP2-City-Test.mmdb
docker/logstash/templates/: wforce_template.json
docker/redis/conf/: redis.conf
docker/regression/: Dockerfile  Dockerfile.tmp  regression.sh
docker/wforce_image/: .gitignore  Dockerfile  Dockerfile.minimal  Makefile.am  create_config.sh  docker-compose.yml  docker-entrypoint.sh  trackalert.conf.j2  wforce.conf.j2
docs/: .gitignore  Makefile.am  index.md  swag2md.pl  trackalert_api.7.header
docs/docker/: wforce_docker.md
docs/manpages/: replfwd.1.md  replfwd.conf.5.md  trackalert.1.md  trackalert.conf.5.md  wf_dump_entries.1.md  wforce.1.md  wforce.conf.5.md  wforce_webhook.5.md
docs/release_notes/: ReleaseNotes-1.4.0.md  ReleaseNotes-2.0.0.md  ReleaseNotes-2.0.1.md  ReleaseNotes-2.1.0.md  ReleaseNotes-2.10.0.md  ReleaseNotes-2.10.1.md  ReleaseNotes-2.10.2.md  ReleaseNotes-2.11.0.md  ReleaseNotes-2.12.0.md  ReleaseNotes-2.12.1.md  ReleaseNotes-2.12.2.md  ReleaseNotes-2.2.0.md  ReleaseNotes-2.2.1.md  ReleaseNotes-2.2.2.md  ReleaseNotes-2.4.0.md  ReleaseNotes-2.4.1.md  ReleaseNotes-2.6.0.md  ReleaseNotes-2.6.1.md  ReleaseNotes-2.6.2.md  ReleaseNotes-2.8.0.md  ReleaseNotes-3.0.0.md  ReleaseNotes-3.0.1.md
docs/swagger/: replfwd_api.7.yml  report_api.7.yml  set-version  trackalert_api.7.yml  wforce_api.7.yml
elasticqueries/: login_fail_query.json  login_success_query.json  query.json
ext/: Makefile.am  count_min_sketch.cpp  count_min_sketch.hpp  hyperloglog.hpp  murmur3.cc
ext/ext/: Makefile.am  count_min_sketch.cpp  count_min_sketch.hpp  ctpl.h  hyperloglog.hpp  threadname.cc  threadname.hh
ext/ext/luawrapper/include/: LuaContext.hpp
ext/ext/scheduler/: Cron.h  InterruptableSleep.h  Scheduler.h
ext/ext/uap-cpp/: UaParser.cpp
gendata/: README.md  gen_fail_reports.lua  gen_success_reports.lua  send_reports.py  wforce_elastic.conf
grafana/: grafana_dashboard.json
pdns/ext/yahttp/yahttp/: Makefile.am  Makefile.in  reqresp.cpp
report_api/: .gitignore  MANIFEST.in  Makefile.am  prepare-production.sh  production-httpd.sh  requirements.txt  run.sh  runreport.py  setup.py
report_api/helpers/: wforce-report-api-docker.conf  wforce-report-api-webserver  wforce-report-api.conf  wforce-report-api.service
report_api/instance/: report.cfg
report_api/manpages/: wforce-report-api.5.md
report_api/nginx/: nginx.example.conf
report_api/wforce/: __init__.py  gunicorn_config.py  report.py
trackalert/: .gitignore  Makefile.am  README.md  device_parser.cc  device_parser.hh  ext  hmac.cc  hmac.hh  login_tuple.cc  login_tuple.hh  perf-stats.cc  perf-stats.hh  trackalert-lua.cc  trackalert-luastate.hh  trackalert-web.cc  trackalert-web.hh  trackalert.cc  trackalert.conf  trackalert.hh  trackalert.service.in  twmap.cc  twmap.hh  webhook.cc  webhook.hh  wforce-common-lua.cc  wforce-common-lua.hh  wforce-geoip.cc  wforce-geoip.hh  wforce-webserver.cc  wforce-webserver.hh  wforce_exception.hh  wforce_ns.hh
trackalert/ext/: Makefile.am  count_min_sketch.cpp  count_min_sketch.hpp  ctpl.h  hyperloglog.hpp  murmur3.cc  murmur3.h
trackalert/ext/incbin/: incbin.h
trackalert/ext/json11/: Makefile.am  json11.cpp  json11.hpp
trackalert/ext/luawrapper/include/: LuaContext.hpp
trackalert/ext/uap-cpp/: UaParser.cpp  UaParser.h
trackalert/ext/yahttp/: LICENSE  Makefile.am  README.md
trackalert/ext/yahttp/yahttp/: Makefile.am  cookie.hpp  exception.hpp  reqresp.cpp  reqresp.hpp  router.cpp  router.hpp  url.hpp  utility.hpp  yahttp-config.h  yahttp.hpp
trackalert/m4/: ax_arg_default_enable_disable.m4  boost.m4  libcurl.m4  pdns_check_libcrypto.m4  pdns_check_lua_hpp.m4  pdns_check_pandoc.m4  pdns_check_yamlcpp.m4  pdns_with_lua.m4  pdns_with_luajit.m4  pdns_with_protobuf.m4  perl_modules.m4  systemd.m4
wforce/: .gitignore  Makefile.am  blacklist.cc  blacklist.hh  blackwhitelist.cc  blackwhitelist.hh  dump_entries.cc  foo  luastate.hh  replfwd-lua.cc  replfwd-replication.cc  replfwd-replication.hh  replfwd-web.cc  replfwd-web.hh  replfwd.cc  replfwd.conf  replfwd.hh  replfwd.service.in  replication.cc  replication.hh  replication.proto  replication_bl.cc  replication_bl.hh  replication_sdb.cc  replication_sdb.hh  replication_wl.cc  replication_wl.hh  twmap-wrapper.cc  twmap-wrapper.hh  wforce-common-lua.cc  wforce-common-lua.hh  wforce-lua.cc  wforce-prometheus.cc  wforce-prometheus.hh  wforce-replication.cc  wforce-replication.hh  wforce-sibling.cc  wforce-sibling.hh  wforce-web.cc  wforce-web.hh  (+5 more)
(+148 files in other folders)
