noinst_LTLIBRARIES=libext.la
noinst_HEADERS=count_min_sketch.hpp murmur3.h ctpl.h hyperloglog.hpp uap-cpp/UaParser.h incbin/incbin.h luawrapper/include/LuaContext.hpp
libext_la_SOURCES=count_min_sketch.cpp count_min_sketch.hpp murmur3.cc murmur3.h uap-cpp/UaParser.cpp uap-cpp/UaParser.h ctpl.h hyperloglog.hpp incbin/incbin.h luawrapper/include/LuaContext.hpp
